# decentralized_iam_battery_data

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  docker-compose.yml  tools.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  REQUIREMENTS_TEMPLATE.md
blockchain/: .gitignore  Makefile  README.md  blockchain.test.json  docker-compose-dev.yml  generate-docs.sh  go.mod  go.sum  tools.py  typedoc.html.json  typedoc.json  typedoc.md.json
bms/: .gitignore  .gitmodules  Doxyfile  Makefile  README.md  configuration.xml  dns-server.conf  memory_regions.ld  ra_cfg.txt
bms-json-gen/: CMakeLists.txt  README.md
bms-json-gen/src/: main.c  process_json.c  process_json.h
client/: .env  README.md  main.py  requirements.txt  service_access.py  sign.py  sign_service.py
cloud/: .dockerignore  ATTRIBUTION.md  Dockerfile  Dockerfile-ui  README.md  api.py  api_documentation.md  crypto.py  docker-compose.yml  error_handling.md  flash.py  models.py  requirements.txt  security_guidelines.md  streamlit_ui.py  test_client.py
data_gen/: data_generator.py  test_endpoint.py
mock_bms/: .env  api.py  data_gen.py  main.py  message_creation.py  requirements.txt  utils.py
mock_bms/source_files/bms-json-gen-source/: CMakeLists.txt  README.md
mock_bms/source_files/bms-json-gen-source/lib/cJSON/: CMakeLists.txt
mock_bms/source_files/bms-json-gen-source/src/: main.c  main.c.txt  process_json.c  process_json.h
organizational/: task_assignments.md  team_structure.md
requirements/: datatypes_attributes.md  rights_and_roles.md
service-client/: .env  main.py  (+2 more)
(+406 files in other folders)
